--- a/index.html
+++ b/index.html
@@ -1,12 +1,228 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>penguin</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>penguin</title>
+  <!-- tailwind css -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- customizing -->
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            clifford: '#da373d',
+            penguin: '#FFFBF0',
+            jacketprice: '#FABE4C',
+            jacketbgcolor: '#F1F1F1',
+            mainbgcolor: 'E5E5E5',
+
+          }
+        }
+      }
+    }
+  </script>
 </head>
+
 <body>
-    
+  <header class=" bg-penguin pb-32 pt-12">
+    <section class="container mx-auto sm:flex justify-around items-center">
+      <div class="space-y-4">
+        <h1 class=" sm:text-5xl text-2xl uppercase font-bold ">
+          <span class="text-yellow-400">Be the Penguins</span>
+          <br>
+          <span>of Winter</span>
+        </h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, id eaque!</p>
+        <button class="uppercase bg-[#A4BC46] rounded-xl py-4 px-7 text-white font-semibold"><svg
+            xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none" viewBox="0 0 24 24"
+            stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+          </svg>Buy Now</button>
+      </div>
+      <div class="pt-8 sm:pt-0">
+        <img class="w-1/2 sm:w-full" src="images/model.png" alt="">
+      </div>
+    </section>
+  </header>
+
+  <main class="container mx-auto  bg-mainbgcolor">
+    <!-- woman Jacket -->
+    <section>
+      <h2 class="text-5xl font-bold uppercase my-10">Woman Jacket</h2>
+      <div class="grid md:grid-cols-2 lg:grid-cols-3  gap-7 rounded-xl ">
+        <!-- jacket 1 -->
+        <div class="p-4 shadow-lg rounded-xl">
+          <div class=" p-5 bg-jacketbgcolor rounded-xl">
+            <img class="" src="images/jacket-1.png" alt="">
+          </div>
+          <h3 class="text-3xl font-semibold">Yellow Coat Jacket </h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate, libero!</p>
+          <div class="flex justify-between">
+            <h2 class="text-xl font-bold text-jacketprice">$234</h2>
+            <button class="uppercase bg-[#A4BC46] rounded-xl py-4 px-7 text-white font-semibold"><svg
+                xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+              </svg>Buy Now</button>
+
+          </div>
+        </div>
+        <!-- jacket 2 -->
+        <div class="p-4 shadow-lg rounded-xl">
+          <div class=" p-5 bg-jacketbgcolor rounded-xl">
+            <img class="" src="images/jacket-2.png" alt="">
+          </div>
+          <h3 class="text-3xl font-semibold">Ladies Jacket </h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate, libero!</p>
+          <div class="flex justify-between">
+            <h2 class="text-xl font-bold text-jacketprice">$234</h2>
+            <button class="uppercase bg-[#A4BC46] rounded-xl py-4 px-7 text-white font-semibold"><svg
+                xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+              </svg>Buy Now</button>
+
+          </div>
+        </div>
+        <!-- jacket 3 -->
+        <div class="p-4 shadow-lg rounded-xl">
+          <div class=" p-5 bg-jacketbgcolor rounded-xl">
+            <img class="" src="images/jacket-3.png" alt="">
+          </div>
+          <h3 class="text-3xl font-semibold">Woman Leather Jacket </h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate, libero!</p>
+          <div class="flex justify-between">
+            <h2 class="text-xl font-bold text-jacketprice">$234</h2>
+            <button class="uppercase bg-[#A4BC46] rounded-xl py-4 px-7 text-white font-semibold"><svg
+                xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+              </svg>Buy Now</button>
+
+          </div>
+        </div>
+      </div>
+
+
+    </section>
+
+
+
+
+
+
+    <!-- man Jacket -->
+    <section class="">
+      <h2 class="text-5xl font-bold uppercase my-10">man Jacket</h2>
+      <div class="grid  md:grid-cols-2 lg:grid-cols-3 gap-7 rounded-xl ">
+        <!-- jacket 1 -->
+        <div class="p-4 shadow-lg rounded-xl">
+          <div class=" p-5 bg-jacketbgcolor rounded-xl">
+            <img class="" src="images/jacket-4.png" alt="">
+          </div>
+          <h3 class="text-3xl font-semibold">Snowboard Jacket Mens </h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate, libero!</p>
+          <div class="flex justify-between">
+            <h2 class="text-xl font-bold text-jacketprice">$234</h2>
+            <button class="uppercase bg-[#A4BC46] rounded-xl py-4 px-7 text-white font-semibold"><svg
+                xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+              </svg>Buy Now</button>
+
+          </div>
+        </div>
+        <!-- jacket 2 -->
+        <div class="p-4 shadow-lg rounded-xl">
+          <div class=" p-5 bg-jacketbgcolor rounded-xl">
+            <img class="" src="images/jacket-5.png" alt="">
+          </div>
+          <h3 class="text-3xl font-semibold">Man Leather Jackets </h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate, libero!</p>
+          <div class="flex justify-between">
+            <h2 class="text-xl font-bold text-jacketprice">$234</h2>
+            <button class="uppercase bg-[#A4BC46] rounded-xl py-4 px-7 text-white font-semibold"><svg
+                xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+              </svg>Buy Now</button>
+
+          </div>
+        </div>
+        <!-- jacket 3 -->
+        <div class="p-4 shadow-lg rounded-xl">
+          <div class=" p-5 bg-jacketbgcolor rounded-xl">
+            <img class="" src="images/jacket-6.png" alt="">
+          </div>
+          <h3 class="text-3xl font-semibold">Man Casual Jackets </h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate, libero!</p>
+          <div class="flex justify-between">
+            <h2 class="text-xl font-bold text-jacketprice">$234</h2>
+            <button class="uppercase bg-[#A4BC46] rounded-xl py-4 px-7 text-white font-semibold"><svg
+                xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+              </svg>Buy Now</button>
+
+          </div>
+        </div>
+      </div>
+
+
+    </section>
+
+    <!-- benifits our -->
+    <section class="my-20">
+      <div class="grid lg:grid-cols-1 lg:grid-cols-2 gap-7">
+        <div class=" flex p-6  bg-white">
+
+          <div class="rounded-xl">
+            <img class="w-20 h-20" src="images/house.png" alt="">
+          </div>
+          <div>
+            <h4 class="text-2xl">Find the Perfect Fit</h4>
+            <p>Everybody is different, which is why we
+              offer styles for every body.</p>
+          </div>
+        </div>
+        <div class=" row-span-3"><img src="images/shopping.png" alt=""></div>
+        <div class=" flex p-6  bg-white">
+
+          <div class="rounded-xl">
+            <img class="w-20 h-20" src="images/box.png" alt="">
+          </div>
+          <div>
+            <h4 class="text-2xl">Find the Perfect Fit</h4>
+            <p>Everybody is different, which is why we
+              offer styles for every body.</p>
+          </div>
+        </div>
+        <div class=" flex p-6  bg-white">
+
+          <div class="rounded-xl">
+            <img class="w-20 h-20" src="images/question.png" alt="">
+          </div>
+          <div>
+            <h4 class="text-2xl">Find the Perfect Fit</h4>
+            <p>Everybody is different, which is why we
+              offer styles for every body.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+  </main>
 </body>
+
 </html>
